chore: allow dynamic agent loading in tests
mockito requires to load a dynamic agent which
will be disallowed in a future JDK release. Add
the relevant flag to still allow agent loading
even when loading gets denied by default. See
JEP 451 for more details.